# mac-cli

./: .gitignore  Makefile  go.mod  go.sum
Formula/: mac-cli.rb
cmd/mac/: main.go
docs/superpowers/plans/: 2026-06-10-langgraph-orchestrator.md  2026-06-11-wizard-revamp.md
docs/superpowers/specs/: 2026-06-11-wizard-revamp-design.md
internal/config/: config.go  config_test.go
internal/credentials/: credentials.go  credentials_test.go
internal/db/: db.go  queries.go
internal/db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
internal/scaffold/: agentcfg_test.go  cloud.go  docker.go  harness.go  harness_test.go  hexagonal.go  k8s.go  k8s_test.go  scaffold.go
internal/tui/: banner.go  banner_test.go  coderun.go  coderun_test.go  events.go  events_test.go  launcher.go  picker.go  theme.go  wizard.go  wizard_test.go
orchestrator/: pyproject.toml
orchestrator/src/mac_orchestrator/: __main__.py  apply.py  config.py  credentials.py  db.py  embeddings.py  graph.py  llm.py  nodes.py  parsing.py  routing.py  shell.py  state.py  ui.py
orchestrator/tests/: test_apply.py  test_config.py  test_credentials.py  test_db_helpers.py  test_graph.py  test_llm.py  test_nodes.py  test_parsing.py  test_routing.py  test_shell.py  test_ui.py
