[project]
name = "mac-orchestrator"
version = "0.1.0"
description = "LangGraph TDD orchestration engine for the mac CLI"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "psycopg[binary]>=3.2",
]

[project.scripts]
mac-orchestrator = "mac_orchestrator.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
